# grit

./: .git-meta  .gitignore  .mailmap  AGENTS.md  Cargo.toml  KILL_SPAWNS.md  LICENSE  Makefile  README.md  TESTING.md  WINDOWS_PORT_PLAN.md  expect  expect.colors  plan.md  progress.md  submodule-plan.md  t6-plan.md  test-results.md
.cargo/: config.toml
bench/: OPTIMIZATION.md  run-everyday.sh
data/: test-files.csv
docs/: bench.html  index.html  install  install-grit-git  install-nightly  install-nightly.ps1  install.ps1  test-progress-history.csv  test-progress-history.html  testfiles.html  timeline.html  transport-lib.html  v1-scope.md
git/: GIT-BUILD-OPTIONS
grit/: Cargo.toml  README.md
grit-cli/: Cargo.toml  README.md
grit-examples/: Cargo.toml
grit-examples/src/: lib.rs  remote.rs
grit-examples/tests/: fetch_push.rs  hash_object.rs  simple_bins.rs
grit-git/: Cargo.toml  README.md  build.rs  upstream_help_synopsis.rs  upstream_range_diff_help.txt  upstream_update_index_help.txt
grit-http-server/: Cargo.toml
grit-http-server/src/: main.rs
grit-legacy/: Cargo.toml
grit-lib/: Cargo.toml  README.md
grit-lib/src/: am.rs  apply.rs  attributes.rs  blame.rs  branch_ref_format.rs  branch_tracking.rs  check_ref_format.rs  combined_diff_patch.rs  combined_tree_diff.rs  commit.rs  commit_encoding.rs  commit_graph_file.rs  commit_graph_write.rs  commit_pretty.rs  commit_trailers.rs  config.rs  credentials.rs  crlf.rs  delta_islands.rs  diff.rs  diff_moved.rs  diffstat.rs  difftool.rs  error.rs  fast_export.rs  fast_import.rs  fetch.rs  fetch_head.rs  fetch_negotiator.rs  filter_process.rs  fsck_standalone.rs  gc.rs  git_path.rs  gitmodules.rs  hooks.rs  ident_config.rs  ident_resolve.rs  ignore.rs  index.rs  index_name_hash_lazy.rs  (+57 more)
grit-lib/src/git_date/: approx.rs  compat.rs  mod.rs  parse.rs  show.rs  tm.rs
grit-lib/src/parse_options_test_tool/: flags_cmd.rs  parse_options_cmd.rs  sub_cmd.rs
grit-lib/src/plumbing/: mod.rs
grit-lib/src/porcelain/: checkout.rs  cherry_pick.rs  format_patch.rs  log.rs  merge.rs  mod.rs  rebase.rs  revert.rs  stash.rs  status.rs  tag.rs
grit-lib/src/transport/: http.rs
grit-lib/src/transport/http/: ureq_client.rs
grit-lib/tests/: credentials.rs  matrix_completeness.rs  matrix_credentials.rs  matrix_fetch.rs  matrix_packs.rs  matrix_push.rs  matrix_sha256.rs  negotiator_tag_tip.rs  transfer_local_fetch.rs  transfer_local_push.rs  transfer_maint.rs  transfer_pack.rs  transport_git_daemon.rs  transport_git_daemon_v2.rs  transport_http.rs  transport_http_auth.rs  transport_http_proxy_cookies.rs  transport_http_shallow.rs  transport_push.rs  transport_push_options.rs  transport_shallow.rs  transport_ssh.rs  transport_ssh_push.rs  transport_v2_adversarial.rs
grit-protocol/: Cargo.toml
grit-protocol/src/: lib.rs  receive_pack.rs  upload_pack.rs
grit-simple/: Cargo.toml  README.md
grit-simple/src/: context.rs  json_filter.rs  main.rs  net.rs  output.rs  ui.rs
grit-simple/src/commands/: add.rs  auth.rs  branch.rs  clone.rs  commit.rs  config.rs  diff.rs  fetch.rs  init.rs  log.rs  manager.rs  merge.rs  mod.rs  pick.rs  pull.rs  push.rs  remote.rs  shortlog.rs  show.rs  status.rs  switch.rs  tag.rs  update.rs
grit-simple/tests/: json_output.rs
grit-utils/: Cargo.toml
grit-utils/src/: main.rs
grit/src/: alias.rs  bundle_uri.rs  bundle_uri_test_tool.rs  editor.rs  ext_transport.rs  fetch_submodule_recurse.rs  fetch_transport.rs  file_upload_pack_v2.rs  http_bundle_uri.rs  http_client.rs  http_push_smart.rs  http_smart.rs  ident.rs  main.rs  pack_objects_upload.rs  pathspec.rs  protocol.rs  receive_ingest.rs  ssh_transport.rs  test_tool_run_command.rs  trace_packet.rs
grit/src/commands/: _submodule_run_update_inner.rs.inc  add.rs  add_interactive.rs  add_patch.rs  am.rs  annotate.rs  apply.rs  archive.rs  bisect.rs  blame.rs  branch.rs  bugreport.rs  bundle.rs  cat_file.rs  checkout.rs  checkout_index.rs  cherry_pick.rs  clean.rs  clone.rs  commit.rs  commit_graph.rs  commit_tree.rs  completions.rs  config.rs  count_objects.rs  describe.rs  diff.rs  diff_files.rs  diff_index.rs  diff_tree.rs  difftool.rs  fast_export.rs  fast_import.rs  fetch.rs  filter_branch.rs  for_each_ref.rs  format_patch.rs  fsck.rs  gc.rs  grep.rs  (+65 more)
grit/tests/: completions.rs  full_name_scope.rs  sha256_support.rs
grit/tests/common/: mod.rs
logs/: 2026-05-18-worktree-add-id.md  2026-05-18-worktree-lib.md  2026-05-19-ls-files-worktree-config.md  2026-05-19-repository-session-api.md  2026-05-19-worktree-add-bare-remote.md  2026-05-19-worktree-add-hooks.md  2026-05-19-worktree-ref-store.md  2026-05-19-worktree-refs.md  2026-05-19-worktree-relative-paths.md  2026-05-19-worktree-repair-heads.md  2026-05-19_18:32-diff-outside-repo.md  2026-05-19_18:51-rev-parse-git-path.md  2026-05-19_18:56-commit-tree-dedup-parents.md  2026-05-19_19:10-log-decorate-full.md  2026-05-19_19:16-logallrefupdates-reflog-create.md  2026-05-19_22:09-add-long-magic-pathspec.md  2026-05-20-partial-clone-promisor.md  2026-05-20-sparse-checkout-t1091.md  2026-05-20-worktree-1.1-1.3.md  2026-05-20-worktree-move.md  2026-05-20-worktree-submodule.md  2026-05-21_07:00-phase-2-filter-clone-fetch.md  2026-05-22_12:30-phase-2-http-promisor.md  2026-05-29_1320-t1510-repo-setup.md  2026-05-29_1335-t1517-outside-repo.md  2026-05-29_1435-t5551-http-fetch-smart.md  2026-05-29_1549-t4067-diff-partial-clone.md  2026-05-29_1616-t5620-backfill.md  2026-05-29_1920-t5616-partial-clone.md  2026-05-29_2037-t6110-rev-list-sparse.md  2026-05-30_1014-t7510-signed-commit.md  2026-05-30_1359-t5401-update-hooks.md  2026-05-30_1408-t7505-prepare-commit-msg-hook.md  2026-05-30_1424-t5407-post-rewrite-hook.md  2026-05-30_1441-t7504-commit-msg-hook.md  2026-05-30_1448-t5403-post-checkout-hook.md  2026-05-30_1546-t3602-rm-sparse-checkout.md  2026-05-30_1612-t7002-mv-sparse-checkout.md  2026-05-30_1801-t1091-sparse-checkout-builtin.md  2026-05-30_1834-t1090-sparse-checkout-scope.md  (+545 more)
plans/: old-plan.md  phase0-0.2-transport-in-lib-assessment.md  phase0-0.3-binary-relocation-audit.md
(+1240 files in other folders)
