[workspace]
members = ["grit", "grit-lib", "grit-protocol", "grit-http-server", "grit-simple", "grit-utils", "grit-examples"]
default-members = ["grit", "grit-lib", "grit-protocol", "grit-simple"]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2021"
repository = "https://github.com/gitbutlerapp/grit"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
sha1 = "0.10"
sha2 = "0.10"
flate2 = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
hex = "0.4"
tempfile = "3"
similar = "2"
imara-diff = { version = "0.2", features = ["unified_diff"] }
merge3 = "0.2"
regex = "1"
unicode-width = "0.2"
libc = "0.2"
hungarian = "1.1.1"
ureq = "2.12"
url = "2.5"
base64 = "0.22"
icu_normalizer = "2.0.0"
shell-words = "1.1"
filetime = "0.2"
nix = { version = "0.29", default-features = false, features = ["fs", "signal", "user", "poll", "feature"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
