[package]
name = "grit-examples"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Standalone example binaries demonstrating grit-lib usage"
repository.workspace = true
publish = false

[[bin]]
name = "gritx-hash-object"
path = "src/bin/gritx-hash-object.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
# `http-ureq` provides the default ureq-backed HTTP client used by gritx-fetch /
# gritx-push for smart-HTTP remotes.
grit-lib = { path = "../grit-lib", features = ["http-ureq"] }

[dev-dependencies]
tempfile.workspace = true
