[package]
name = "grit-lib"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Core library for the grit Git implementation"
readme = "README.md"
repository = "https://github.com/gitbutlerapp/grit"

# Inherit workspace deny rules but allow `unsafe` for `git_date` (`libc` FFI like Git `date.c`).
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[features]
# Gates the test-tool-only modules (`parse_options_test_tool`, `test_tool_progress`).
# Empty by default; enabled transitively by `grit-cli`'s default `test-tools` feature.
test-tools = []

[dependencies]
thiserror.workspace = true
sha1.workspace = true
sha2.workspace = true
flate2.workspace = true
time.workspace = true
hex.workspace = true
tempfile.workspace = true
similar.workspace = true
merge3.workspace = true
imara-diff.workspace = true
regex.workspace = true
libc.workspace = true
unicode-width.workspace = true
encoding_rs = "0.8.35"
icu_normalizer.workspace = true
url.workspace = true
filetime.workspace = true
