[package]
name = "grit-lib"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Core library for the grit Git implementation"
readme = "README.md"
repository = "https://github.com/gitbutlerapp/grit"

# Inherit workspace deny rules but allow `unsafe` for `git_date` (`libc` FFI like Git `date.c`).
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[features]
# Gates the test-tool-only modules (`parse_options_test_tool`, `test_tool_progress`).
# Empty by default; enabled transitively by `grit-git`'s default `test-tools` feature.
test-tools = []
# Provides the default `ureq`-backed `HttpClient` for the smart-HTTP transport
# (`transport::http::ureq_client`). Off by default so embedders can bring their
# own HTTP stack.
http-ureq = ["dep:ureq", "dep:base64"]

[dependencies]
thiserror.workspace = true
sha1.workspace = true
sha2.workspace = true
flate2.workspace = true
time.workspace = true
hex.workspace = true
tempfile.workspace = true
similar.workspace = true
merge3.workspace = true
imara-diff.workspace = true
regex.workspace = true
libc.workspace = true
unicode-width.workspace = true
encoding_rs = "0.8.35"
icu_normalizer.workspace = true
url.workspace = true
filetime.workspace = true
shell-words.workspace = true

# Optional: the default `ureq`-backed HTTP client (feature `http-ureq`).
ureq = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

# `nix` (signals, poll, uid, uname, Unix sockets) is only used behind
# `#[cfg(unix)]`, so it is not pulled in on Windows.
[target.'cfg(unix)'.dependencies]
nix.workspace = true

# `windows-sys` backs the Windows Credential Manager store (`credentials::windows_store`),
# used by the built-in `gs manager` credential helper, and enabling ANSI virtual
# terminal processing for colored output (`terminal`). Windows-only.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Credentials", "Win32_System_Console"] }

[dev-dependencies]
grit-test-support = { path = "../grit-test-support" }
