[package]
name = "grit-protocol"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Git smart protocol handlers for the grit implementation"
repository = "https://github.com/gitbutlerapp/grit"

[lints]
workspace = true

[dependencies]
grit-lib = { version = "0.5", path = "../grit-lib" }
anyhow.workspace = true
