[package]
name = "grit-simple"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "A simplified alternative CLI for Grit"
repository = "https://github.com/schacon/grit"
readme = "README.md"

[[bin]]
name = "gi"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
grit-lib = { version = "0.3", path = "../grit-lib" }
