[package]
name = "grit-simple"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "A simplified alternative CLI for Grit"
repository = "https://github.com/gitbutlerapp/grit"
readme = "README.md"

[[bin]]
name = "gs"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
grit-lib = { version = "0.4", path = "../grit-lib", features = ["http-ureq"] }
time.workspace = true
