[package]
name = "grit-simple"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "A simplified alternative CLI for Grit"
repository = "https://github.com/gitbutlerapp/grit"
readme = "README.md"

[[bin]]
name = "gs"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
grit-lib = { version = "0.4", path = "../grit-lib", features = ["http-ureq"] }
time.workspace = true
serde.workspace = true
serde_json.workspace = true
jaq-core = "3.1"
jaq-json = "2.0"
jaq-std = "3.0"
terminal_size.workspace = true
# `inline` enables word-level intra-line highlighting for `gs diff`.
similar = { workspace = true, features = ["inline"] }

[dev-dependencies]
serde_json.workspace = true
